Fix design on mobile

--- a/calculator.css
+++ b/calculator.css
@@ -30,7 +30,9 @@
   justify-content: flex-end;
   font-family: Arial, Helvetica, sans-serif;
   margin-right: 36px;
+  margin-left: 36px;
   font-weight: 100;
+  overflow: hidden;
 }
 
 .buttons {
@@ -84,4 +86,10 @@
 }
 .dot {
   font-size: 30px;
+}
+
+@media only screen and (max-width: 600px) {
+  .calculator {
+    border: none;
+  }
 }
